--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </section>
 
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counter-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -180,7 +180,7 @@
         </div>
         <div class="col-sm-3 col-lg-3">
           <div class="counter-box pt-4 pt-md-0">
-            <div class="counter-ico">
+            <div class="ico">
               <span class="ico-circle"><i class="ion-checkmark-round"></i></span>
             </div>
             <div class="counter-num">
@@ -385,7 +385,7 @@
 
 
   <!--/ Section Testimonials Star /-->
-  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/testimonial-212.jpg)">
+  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/testimonial-5.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -509,7 +509,7 @@
                     </h5>
                   </div>
                   <div>
-                    
+
                       </form>
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
                       <div id="errormessage"></div>
