--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </h5>
                   </div>
                   <p class="lead">
-                  Being an young Mechatronics engineer student with domain knowledge and interest in Physics. Expereience in embedded systems, Robotics and Sounding rocketry.
+                  I am young Mechatronics engineer student with domain knowledge and interest in Physics. Expereience in embedded systems, Robotics and Sounding rocketry.
                   I'm pretend to be calm but dynamic through the work.  Well versed in Public speaking. Completed my Higher studies in St.paul's Neyveli.
                   </p>
                   <p class="lead">
