--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">  This is Jai </h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Mechatronics,Embedded engineer,Innovative engg trainee</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Mechatronics,Embedded engineer,Innovative engineer trainee</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -100,7 +100,7 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Jayachandhran S </span></p>
+                      <p><span class="title-s">Name: </span> <span> Mr.Jayachandhran S </span></p>
                       <p><span class="title-s">Profile: </span> <span>student</span></p>
                       <p><span class="title-s">Email: </span> <span>svjai98@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+91)8754945497</span></p>
