--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </section>
 
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counter-bg.jpg)">
+  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/jaia.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
