--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
               </div>
               <div class="content-test">
                 <p class="description lead">
-                  Don't believe things,Know it to do. enginer
+                  Don't believe things,Know it to do.
+                                -engineer
                 </p>
                 <span class="comit"><i class="fa fa-quote-right"></i></span>
               </div>
