--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">  This is Jai </h1>
+          <h1 class="intro-title mb-4"> Updating my Profile</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Innovation evangelist</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
