--- a/experience/index.html
+++ b/experience/index.html
@@ -23,7 +23,7 @@
             <li><a href="/#home">Home</a></li>
             <li><a href="/#about">About</a></li>
             <li><a href="/#skills">Skills</a></li>
-            <li><a href="/#education">Education</a></li>
+            <!-- <li><a href="/#education">Education</a></li> -->
             <li><a href="/#work">Work</a></li>
             <li><a class="active" href="/#experience">Experience</a></li>
             <li><a href="/#contact">Contact</a></li>
@@ -192,7 +192,7 @@
           <a href="/#home"><i class="fas fa-chevron-circle-right"></i> home</a>
           <a href="/#about"><i class="fas fa-chevron-circle-right"></i> about</a>
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
-          <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
+          <!-- <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a> -->
           <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
           <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
       </div>
