--- a/experience/index.html
+++ b/experience/index.html
@@ -183,10 +183,9 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+        <h3></h3>
+        <p>Thank you . <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
-
       <div class="box">
           <h3>quick links</h3>
           <a href="/#home"><i class="fas fa-chevron-circle-right"></i> home</a>
