--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1-kSBwFhOUpI0VqV5-MDd_jOmjG1iZ-Jn/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1-kSBwFhOUpI0VqV5-MDd_jOmjG1iZ-Jn/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
               <!-- https://drive.google.com/file/d/1C_LAH7BZVaMiuPnZ1V9hynqRaeAZNolw/view --> 
               <i class="fas fa-chevron-right"></i>
             </a>
