Revise experience section in index.html
Updated job titles and dates in the experience section.

--- a/index.html
+++ b/index.html
@@ -154,14 +154,27 @@
 
   <div class="timeline">
 
+
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Researcher II</h2>
+        </div>
+        <div class="desc">
+            <h3>Research & Innovation Operation Center</h3>
+            <p>Apr 2025 - Present</p>
+        </div>
+      </div>
+    </div>
+      
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Research And Development Engineer</h2>
+          <h2>Research Assistant (COOP)</h2>
         </div>
         <div class="desc">
-            <h3>LogyAI</h3>
-            <p>Mar 2022 - present</p>
+            <h3>Research and Innovation Operations</h3>
+            <p>Dec 2024 - Apr 2025</p>
         </div>
       </div>
     </div>
@@ -173,7 +186,20 @@
         </div>
         <div class="desc">
             <h3>Research & Innovation Lambton College</h3>
-            <p>Dec 2023 - present</p>
+            <p>Dec 2023 - Apr 2025</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Research And Development Engineer</h2>
+        </div>
+        <div class="desc">
+            <h3>LogyAI</h3>
+            <p>Mar 2022 - Sep2024</p>
         </div>
       </div>
     </div>
